--- a/index.html
+++ b/index.html
@@ -6,8 +6,84 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <a href="">WEBSTUDIO</a>
+        <nav>
+            <ul>
+                <li>Studio</li>
+                <li>Portfolio</li>
+                <li>Contacts</li>
+            </ul>
+        </nav>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111"></a>+11 (000) 111-11-11</li>
+            </ul>
+        </address>
+    </header>
+    <main>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+
+        <section>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>
+                        Our goal is to identify the business problem to walk away with the perfect and creative solution. 
+                    </p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>
+                        Bring the key message to the brand's audience for the best price within the shortest possible time. 
+                    </p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>
+                        Research and confirm brands that present the strongest digital growth opportunities and minimize risk. 
+                    </p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>
+                        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving. 
+                    </p>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="./images/mark_g.jpg" alt="Mark Guerrero photo" width="264">
+                    <p>Mark Guerrero</p>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/tom.f.png" alt="Tom Ford photo" width="264">
+                    <p>Tom Ford photo</p>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/camila_g.png" alt="Camila Garcia photo" width="264">
+                    <p>Camila Garcia</p>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/daniel_w.png" alt="Daniel Wilson photo" width="264">
+                    <p>Daniel Wilson</p>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="">WEBSTUDIO</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 </html>
