--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <header>
-        <a href="">WEBSTUDIO</a>
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li>Studio</li>
-                <li>Portfolio</li>
-                <li>Contacts</li>
+                <li><a href="">Studio</a></li>
+                <li><a href=""></a>Portfolio</a></li>
+                <li><a href=""></a>Contacts</a></li>
             </ul>
         </nav>
         <address>
@@ -23,10 +23,12 @@
         </address>
     </header>
     <main>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
-
         <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
+        <section>
+            <h2> </h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -60,29 +62,29 @@
             <ul>
                 <li>
                     <img src="./images/mark_g.jpg" alt="Mark Guerrero photo" width="264">
-                    <p>Mark Guerrero</p>
+                    <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/tom.f.png" alt="Tom Ford photo" width="264">
-                    <p>Tom Ford photo</p>
+                    <h3>Tom Ford photo</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/camila_g.png" alt="Camila Garcia photo" width="264">
-                    <p>Camila Garcia</p>
+                    <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/daniel_w.png" alt="Daniel Wilson photo" width="264">
-                    <p>Daniel Wilson</p>
+                    <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
