update index file

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
-                <li><a href=""></a>Portfolio</a></li>
-                <li><a href=""></a>Contacts</a></li>
+                <li><a href="">Portfolio</a></a></li>
+                <li><a href="">Contacts</a></a></li>
             </ul>
         </nav>
         <address>
@@ -28,7 +28,7 @@
             <button type="button">Order Service</button>
         </section>
         <section>
-            <h2> </h2>
+            <h2>Title</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
