--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <address>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111"></a>+11 (000) 111-11-11</li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -66,17 +66,17 @@
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/tom.f.png" alt="Tom Ford photo" width="264">
+                    <img src="./images/tom.f.jpg" alt="Tom Ford photo" width="264">
                     <h3>Tom Ford photo</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/camila_g.png" alt="Camila Garcia photo" width="264">
+                    <img src="./images/camila_g.jpg" alt="Camila Garcia photo" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/daniel_w.png" alt="Daniel Wilson photo" width="264">
+                    <img src="./images/daniel_w.jpg" alt="Daniel Wilson photo" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
