update index file

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></a></li>
-                <li><a href="">Contacts</a></a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
@@ -66,8 +66,8 @@
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/tom.f.jpg" alt="Tom Ford photo" width="264">
-                    <h3>Tom Ford photo</h3>
+                    <img src="./images/tom_f.jpg" alt="Tom Ford photo" width="264">
+                    <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
